Take into account logind sleep and idle inhibitions

System services cannot access the user's session bus and that freedesktop
inhibition interface appears deprecated. This patch makes PowerDevil watch
logind's BlockInhibited property and internally posts an appropriate inhibition.

BUG: 364067
FIXED-IN: 5.21.0